<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="ST_PAIn_Drops" Id="{12fdf6e2-4fd6-4271-9699-a6a53689763c}">
    <Declaration><![CDATA[TYPE ST_PAIn_Drops :
STRUCT
	stValve 			:ST_PAIn_Valve;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>